--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Hextris</title>
 		<meta name="description" content="An addictive puzzle game inspired by Tetris.">
-		<link rel="manifest" href="manifest.webmanifest">
+		<!--<link rel="manifest" href="manifest.webmanifest"> -->
 		<meta name="apple-itunes-app" content="app-id=903769553"/>
 		<meta name="apple-mobile-web-app-title" content="Hextris">
 		<meta name="apple-mobile-web-app-capable" content="yes">
@@ -44,6 +44,12 @@
 		<link href='http://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="style/fa/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
+		<script>
+			window.gdx = window.gdx || 0;
+			window.kdy = window.kdy || 0;
+		  </script>
+		  
+		  
 		<script type='text/javascript' src="vendor/hammer.min.js"></script>
 		<script type='text/javascript' src="vendor/js.cookie.js"></script>
 		<script type='text/javascript' src="vendor/jsonfn.min.js"></script>
