--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
 		<script src="vendor/sweet-alert.min.js"></script>
 		<link rel="stylesheet" href="style/rrssb.css"/>
 		<script data-ad-client="ca-pub-9107422120987163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		
+			
+			
 	</head>
+
+	
 	<body>
 		<canvas id="canvas" width="600" height="600"></canvas>
 		<div id="overlay" class="faded overlay"></div>
@@ -91,14 +96,14 @@
 		<div id='highScoreInGameText'>
 			<div id='highScoreInGameTextHeader'>HIGH SCORE</div><div id='currentHighScore'>10292</div>
 		</div>    
-		<div id="rankingContainer" style="position: absolute; top: 10px; right: 10px; background-color: rgba(255,255,255,0.9); padding: 10px; border-radius: 10px; z-index: 10000;">
-	<h2 style="margin: 0; font-size: 1.2em;">Ranking</h2>
-	<ol id="rankingList" style="padding-left: 20px; margin: 0;"></ol>
-	<div id='cScore'>1843</div>
-				<div id='highScoresTitle' class='GOTitle'>HIGH SCORES</div>
-				<div class='score'><span class='scoreNum'>1.</span> <div id="1place" style="display:inline;">0</div></div>
-				<div class='score'><span class='scoreNum'>2.</span> <div id="2place" style="display:inline;">0</div></div>
-				<div class='score'><span class='scoreNum'>3.</span> <div id="3place" style="display:inline;">0</div></div>
+		<div class="ranking">
+			<strong>Ranking</strong><br>
+			
+		</div>
+		
+		<script src="js/ranking.js"></script>
+		
+		
 
 </div>
 
