correcciones en nombres de usuarios ranking

--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
 			<div id='highScoreInGameTextHeader'>HIGH SCORE</div><div id='currentHighScore'>0</div>
 		</div>    
 		<div class="ranking">
+			<div id="ranking-content">Cargando ranking...</div>
 			<strong>Ranking</strong><br>
 			
+
 		</div>
 		
 		
