Ranking en tiempo real

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 		<div id='highScoreInGameText'>
 			<div id='highScoreInGameTextHeader'>HIGH SCORE</div><div id='currentHighScore'>0</div>
 		</div>    
-		<div class="ranking">
-			<div id="ranking-content">Cargando ranking...</div>
+		<div class="ranking" id="Leaderboard"> 
 			<strong>Ranking</strong><br>
+			
 			
 
 		</div>
