--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
+
 		<title>Hextris</title>
 		<meta name="description" content="An addictive puzzle game inspired by Tetris.">
 		<link rel="manifest" href="manifest.webmanifest">
@@ -8,6 +9,7 @@
 		<meta name="apple-mobile-web-app-title" content="Hextris">
 		<meta name="mobile-web-app-capable" content="yes">
 
+		<link rel="manifest" href="manifest.json">
 		<link rel="apple-touch-icon" sizes="120x120" href="images/icons/apple-touch-120.png">
 		<link rel="apple-touch-icon" sizes="152x152" href="images/icons/apple-touch-152.png">
 		<link rel="apple-touch-icon" sizes="167x167" href="images/icons/apple-touch-167.png">
@@ -94,14 +96,9 @@
 		<div class="ranking" id="Leaderboard"> 
 			<strong>Ranking</strong><br>
 			
-			
-
 		</div>
 		
 		
-		
-		
-
 </div>
 
 		<div id="gameoverscreen">
