juego sin conexion

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang='en'>
 	<head>
 
-		<title>Hextris</title>
-		<meta name="description" content="An addictive puzzle game inspired by Tetris.">
+		<title>Elitrix</title>
+		<meta name="description" content="Think Tetris… but on a hexagon, and way more intense.">
 		
 		<meta name="apple-itunes-app" content="app-id=903769553"/>
 		<meta name="apple-mobile-web-app-title" content="Hextris">
@@ -19,7 +19,7 @@
 	
 		<meta property="og:site_name" content="Hextris"/>
 		<meta property="og:title" content="Hextris"/>
-		<meta property="og:description" content="An addictive puzzle game inspired by Tetris."/>
+		<meta property="og:description" content="Think Tetris… but on a hexagon, and way more intense."/>
 		<meta property="og:type" content="website"/>
 		
 	
