Se agrego offline html y se edito el service worker agregando los elementos en el cache para su funcionamiento offiline, se renombro y vinculo el sw en el index

--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
 		<script src="vendor/sweet-alert.min.js"></script>
 		<link rel="stylesheet" href="style/rrssb.css"/>
 		<script data-ad-client="ca-pub-9107422120987163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
+	<script> 
+		if ('ServiceWorker' in navigator) {
+        window.addEventListener('load', function() {
+            navigator.serviceWorker.register('/sw.js')
+                .then(function(registration) {
+                    console.log('Service Worker registrado con éxito:', registration.scope);
+                })
+                .catch(function(error) {
+                    console.log('Error al registrar el Service Worker:', error);
+                });
+        });
+    }
+	</script>
 	</head>
 	<body>
 		<canvas id="canvas" width="600" height="600"></canvas>
