--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<link rel="stylesheet" href="style/rrssb.css"/>
 		<script data-ad-client="ca-pub-9107422120987163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
 	<script> 
-		if ('ServiceWorker' in navigator) {
+		if ('serviceWorker' in navigator) {
 
             navigator.serviceWorker.register('/sw.js')
                 .then(reg=>console.log('Service Worker registrado', reg))
