--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<script type='text/javascript' src='js/render.js'></script>
 		<script type='text/javascript' src="js/input.js"></script>
 		<script type='text/javascript' src="js/main.js"></script>
-		<script type='text/javascript' src="js/initialization.js"></script>
+		
 		<script src="vendor/sweet-alert.min.js"></script>
 		<link rel="stylesheet" href="style/rrssb.css"/>
 		<script data-ad-client="ca-pub-9107422120987163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>	
@@ -68,6 +68,8 @@
 	</script>
 	</head>
 	<body>
+		<button id="installApp">Instalar App</button>
+
 		<canvas id="canvas" width="600" height="600"></canvas>
 		<div id="overlay" class="faded overlay"></div>
 		<div id='startBtn' ></div>
@@ -110,6 +112,6 @@
 				</div>
 			</div>
 		</div>
-			
+		<script type='text/javascript' src="js/initialization.js"></script>
 	</body>
 </html>
