Archivo txt con codigo para implkementar giroscopio, creacion de js y vinculado a index

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<script type='text/javascript' src='js/render.js'></script>
 		<script type='text/javascript' src="js/input.js"></script>
 		<script type='text/javascript' src="js/main.js"></script>
+		<script type='text/javascript' src="js/gyroscope.js"></script>
 		
 		<script src="vendor/sweet-alert.min.js"></script>
 		<link rel="stylesheet" href="style/rrssb.css"/>
