console log giro derecha izqierda

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<script type='text/javascript' src="js/input.js"></script>
 		<script type='text/javascript' src="js/main.js"></script>
 		<script type='text/javascript' src="js/gyroscope.js"></script>
+		<script type='text/javascript' src="js/vibration.js"></script>
 		
 		<script src="vendor/sweet-alert.min.js"></script>
 		<link rel="stylesheet" href="style/rrssb.css"/>
